Create: header + media

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project Title</title>
+    <title>Minimo | Personal Blog</title>
 
     <!-- Fontawesome icons -->
     <link
@@ -22,7 +22,32 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="header"></header>
+    <header class="header">
+      <div class="container">
+        <div class="header-wrapper">
+          <a href="#" class="logo header__logo link">Minimø</a>
+
+          <nav class="nav header__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link link">Lifestyle</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link link">Photodiary</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link link">Music</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link link">Travel</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <!-- /.header-wrapper -->
+      </div>
+      <!-- /.container -->
+    </header>
     <!-- /.header -->
 
     <main class="main"></main>
