Create: intro section + media

--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
     </header>
     <!-- /.header -->
 
-    <main class="main"></main>
+    <main class="main">
+      <div class="intro">
+        <div class="container"></div>
+        <!-- /.container -->
+      </div>
+      <!-- /.intro -->
+    </main>
     <!-- /.main -->
 
     <footer class="footer"></footer>
