Create: blog sections + media

--- a/index.html
+++ b/index.html
@@ -87,6 +87,187 @@
         <!-- /.container -->
       </section>
       <!-- /.photodiary -->
+
+      <div class="blog">
+        <div class="container">
+          <div class="blog-wrapper">
+            <div class="blog__item">
+              <div class="blog__image-wrapper">
+                <img
+                  src="img/blog/b-1.png"
+                  alt="Image: blog-1"
+                  class="blog__image"
+                />
+              </div>
+              <div class="blog__content">
+                <span class="blog__tag">Lifestyle</span>
+                <h3 class="blog__title">More than just a music festival</h3>
+                <p class="blog__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum. Sed ut perspiciatis unde omnis
+                  iste natus error sit voluptatem accusantium doloremque
+                  laudantium, totam rem aperiam, eaque ipsa quae ab illo
+                  inventore veritatis et quasi architecto beatae vitae dicta
+                  sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+                  aspernatur aut odit aut fugit, sed quia consequuntur magni
+                  dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+                  quisquam est, qui dolorem ipsum quia dolor sit amet,
+                  consectetur, adipisci velit, sed quia non numquam eius modi
+                  tempora incidunt ut labore et dolore magnam aliquam quaerat
+                  voluptatem.
+                </p>
+              </div>
+            </div>
+            <!-- /.blog__item 1 -->
+            <div class="blog__item">
+              <div class="blog__image-wrapper">
+                <img
+                  src="img/blog/b-2.png"
+                  alt="Image: blog-2"
+                  class="blog__image"
+                />
+              </div>
+              <div class="blog__content">
+                <span class="blog__tag">Lifestyle</span>
+                <h3 class="blog__title">Life tastes better with coffee</h3>
+                <p class="blog__text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Labore maxime dolorem perferendis, dolore libero autem
+                  repudiandae aspernatur, debitis sit voluptas soluta adipisci!
+                  Nisi aut animi repellendus et est voluptatibus, provident
+                  mollitia expedita saepe vitae, id nulla? Possimus consectetur
+                  et animi quam molestias!
+                </p>
+              </div>
+            </div>
+            <!-- /.blog__item 2 -->
+          </div>
+          <!-- /.blog-wrapper -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.blog (row-1) -->
+
+      <div class="blog">
+        <div class="container">
+          <div class="blog-wrapper">
+            <div class="blog__item">
+              <div class="blog__image-wrapper">
+                <img
+                  src="img/blog/b-3.png"
+                  alt="Image: blog-3"
+                  class="blog__image"
+                />
+              </div>
+              <div class="blog__content">
+                <span class="blog__tag">Photodiary</span>
+                <h3 class="blog__title">American dream</h3>
+                <p class="blog__text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Molestias nesciunt quo odit reprehenderit nobis sequi aliquam
+                  architecto debitis. Molestias dicta corporis assumenda libero
+                  ullam blanditiis nulla ipsam beatae ipsum doloribus iusto, nam
+                  repellendus reiciendis itaque illo aliquam, dolor sequi
+                  laudantium autem reprehenderit est labore eveniet facere!
+                  Maiores reprehenderit iusto aperiam!
+                </p>
+              </div>
+            </div>
+            <!-- /.blog__item 3 -->
+            <div class="blog__item">
+              <div class="blog__image-wrapper">
+                <img
+                  src="img/blog/b-4.png"
+                  alt="Image: blog-4"
+                  class="blog__image"
+                />
+              </div>
+              <div class="blog__content">
+                <span class="blog__tag">Photodiary</span>
+                <h3 class="blog__title">A day exploring the Alps</h3>
+                <p class="blog__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa
+                  libero hic animi nostrum? Quam animi hic eveniet dolore
+                  aperiam. Qui atque enim cumque veniam dolorem. Maiores magnam
+                  repellat totam commodi provident omnis odit cum similique sit
+                  ullam quibusdam obcaecati inventore sint impedit odio quo
+                  sapiente doloremque veniam, amet accusantium soluta debitis.
+                  Tenetur suscipit, odio alias earum omnis molestias fuga
+                  deserunt?
+                </p>
+              </div>
+            </div>
+            <!-- /.blog__item 4 -->
+          </div>
+          <!-- /.blog-wrapper -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.blog (row-2) -->
+
+      <div class="blog">
+        <div class="container">
+          <div class="blog-wrapper">
+            <div class="blog__item">
+              <div class="blog__image-wrapper">
+                <img
+                  src="img/blog/b-5.png"
+                  alt="Image: blog-5"
+                  class="blog__image"
+                />
+              </div>
+              <div class="blog__content">
+                <span class="blog__tag">Lifestyle</span>
+                <h3 class="blog__title">Top 10 song for running</h3>
+                <p class="blog__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+                  ipsum cupiditate eaque, rerum velit aperiam? Sunt magnam omnis
+                  impedit sapiente odio quod deleniti adipisci corrupti eveniet
+                  ea, repudiandae sit architecto? Error dolor quibusdam tempore
+                  dolore aut! Error expedita exercitationem, ratione delectus
+                  sed velit deleniti.
+                </p>
+              </div>
+            </div>
+            <!-- /.blog__item 5 -->
+            <div class="blog__item">
+              <div class="blog__image-wrapper">
+                <img
+                  src="img/blog/b-6.png"
+                  alt="Image: blog-6"
+                  class="blog__image"
+                />
+              </div>
+              <div class="blog__content">
+                <span class="blog__tag">Lifestyle</span>
+                <h3 class="blog__title">Cold winter days</h3>
+                <p class="blog__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Magnam amet atque rem aspernatur fugit earum. Corporis
+                  reprehenderit voluptatum ex, hic culpa a, velit doloribus
+                  harum commodi quisquam assumenda dignissimos minima, fugit
+                  totam molestiae quam exercitationem sequi eius. Ullam unde
+                  deserunt eius repellendus ad? Suscipit vero laboriosam
+                  assumenda cupiditate. Pariatur corporis nesciunt dolores nihil
+                  excepturi atque nemo sapiente porro assumenda veniam quisquam,
+                  vero facere dolorum quidem sit fugiat earum harum deserunt
+                  nisi a reiciendis?
+                </p>
+              </div>
+            </div>
+            <!-- /.blog__item 6 -->
+          </div>
+          <!-- /.blog-wrapper -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.blog (row-3) -->
     </main>
     <!-- /.main -->
 
