Create: newsletter section + media

--- a/index.html
+++ b/index.html
@@ -211,6 +211,36 @@
       </div>
       <!-- /.blog (row-2) -->
 
+      <section class="newsletter">
+        <div class="container">
+          <div class="newsletter-wrapper">
+            <h2 class="newsletter__title">Sign up for our newsletter!</h2>
+            <form action="send.php" method="POST" class="newsletter__form form">
+              <input
+                type="email"
+                id="newsletter-input"
+                class="input form__input"
+                placeholder="Enter a valid email address"
+                name="email"
+                minlength="2"
+                required
+              />
+              <button
+                type="submit"
+                name="form"
+                value="newsletter-form"
+                class="button form__button"
+              >
+                <i class="form__button-icon fas fa-angle-double-right"></i>
+              </button>
+            </form>
+          </div>
+          <!-- /.newsletter-wrapper -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.newsletter -->
+
       <div class="blog">
         <div class="container">
           <div class="blog-wrapper">
