Create: footer + media

--- a/index.html
+++ b/index.html
@@ -301,7 +301,30 @@
     </main>
     <!-- /.main -->
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-wrapper">
+          <div class="footer__links">
+            <a href="#" class="footer__link link">Terms and conditions</a>
+            <a href="#" class="footer__link link">Privacy</a>
+          </div>
+          <div class="footer__social-links social">
+            <span class="footer__social-text">Follow:</span>
+            <a href="#" class="social__link link">
+              <i class="social__icon fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="social__link link">
+              <i class="social__icon fab fa-twitter"></i>
+            </a>
+            <a href="#" class="social__link link">
+              <i class="social__icon fab fa-instagram"></i>
+            </a>
+          </div>
+        </div>
+        <!-- /.footer-wrapper -->
+      </div>
+      <!-- /.container -->
+    </footer>
     <!-- /.footer -->
 
     <!-- JavaScript Files -->
