--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     <header class="header">
       <div class="container">
         <div class="header-wrapper">
-          <a href="#" class="logo header__logo link">Minimø</a>
+          <a
+            href="https://andrey-ustinov.ru/minimo/"
+            class="logo header__logo link"
+            >Minimø</a
+          >
 
           <nav class="nav header__nav">
             <ul class="nav__list">
@@ -33,7 +37,11 @@
                 <a href="#" class="nav__link link">Lifestyle</a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link link">Photodiary</a>
+                <a
+                  href="https://andrey-ustinov.ru/minimo/photodiary/"
+                  class="nav__link link"
+                  >Photodiary</a
+                >
               </li>
               <li class="nav__item">
                 <a href="#" class="nav__link link">Music</a>
@@ -80,7 +88,9 @@
               velit, sed quia non numquam eius modi tempora incidunt ut labore
               et dolore magnam aliquam quaerat voluptatem.
             </p>
-            <a href="#" class="button btn btn--grey">Leave a comment</a>
+            <a href="#" class="photodiary__button button btn btn--grey"
+              >Leave a comment</a
+            >
           </div>
           <!-- /.photodiary-wrapper -->
         </div>
