Create: moreposts section

--- a/photodiary/index.html
+++ b/photodiary/index.html
@@ -186,6 +186,52 @@
         <!-- /.container -->
       </section>
       <!-- /.photodiary -->
+
+      <div class="moreposts">
+        <div class="container">
+          <div class="moreposts-wrapper">
+            <h3 class="moreposts__suptitle">You may also like</h3>
+            <div class="moreposts__items">
+              <div class="moreposts__item morepost">
+                <div class="morepost__image-wrapper">
+                  <img
+                    src="../img/moreposts/p-1.png"
+                    alt="Post-1"
+                    class="morepost__image"
+                  />
+                </div>
+                <h3 class="morepost__title">Cold winter days</h3>
+              </div>
+              <!-- /.moreposts__item 1 -->
+              <div class="moreposts__item morepost">
+                <div class="morepost__image-wrapper">
+                  <img
+                    src="../img/moreposts/p-2.png"
+                    alt="Post-2"
+                    class="morepost__image"
+                  />
+                </div>
+                <h3 class="morepost__title">A day exploring the Alps</h3>
+              </div>
+              <!-- /.moreposts__item 2 -->
+              <div class="moreposts__item morepost">
+                <div class="morepost__image-wrapper">
+                  <img
+                    src="../img/moreposts/p-3.png"
+                    alt="Post-3"
+                    class="morepost__image"
+                  />
+                </div>
+                <h3 class="morepost__title">American dream</h3>
+              </div>
+              <!-- /.moreposts__item 3 -->
+            </div>
+          </div>
+          <!-- /.moreposts-wrapper -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.moreposts -->
     </main>
     <!-- /.main -->
 
