Create: comments section + media

--- a/photodiary/index.html
+++ b/photodiary/index.html
@@ -232,6 +232,91 @@
         <!-- /.container -->
       </div>
       <!-- /.moreposts -->
+
+      <div class="comments">
+        <div class="container">
+          <div class="comments-wrapper">
+            <span class="comments__count">
+              <span class="comments__number">2</span>
+              comments
+            </span>
+            <div class="comments__items">
+              <div class="comments__item comment">
+                <div class="comment__image-wrapper">
+                  <img
+                    src="../img/comments/c-1.jpg"
+                    alt="Photo: Jane Doe"
+                    class="comment__image"
+                  />
+                </div>
+                <div class="comment__content">
+                  <span class="comment__name">Jane Doe</span>
+                  <p class="comment__text">
+                    Sed ut perspiciatis unde omnis iste natus error sit
+                    voluptatem accusantium doloremque laudantium, totam rem
+                    aperiam, eaque ipsa quae ab illo inventore veritatis et
+                    quasi architecto beatae vitae dicta sunt explicabo!
+                  </p>
+                  <a href="#" class="comment__button button btn btn--grey"
+                    >Reply</a
+                  >
+                </div>
+              </div>
+              <!-- /.comments__item comment 1 -->
+              <div class="comments__item comment">
+                <div class="comment__image-wrapper">
+                  <img
+                    src="../img/comments/c-2.jpg"
+                    alt="Photo: John Doe"
+                    class="comment__image"
+                  />
+                </div>
+                <div class="comment__content">
+                  <span class="comment__name">John Doe</span>
+                  <p class="comment__text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Deserunt commodi error omnis placeat, iste nemo nam vel
+                    dolorem. Minus asperiores ullam laudantium ratione repellat
+                    illum nisi atque. Maxime, non magni.
+                  </p>
+                  <a href="#" class="comment__button button btn btn--grey"
+                    >Reply</a
+                  >
+                </div>
+              </div>
+              <!-- /.comments__item comment 2 -->
+            </div>
+            <!-- /.comments__items -->
+            <div class="comments__leave-comment">
+              <div class="comments__user user">
+                <span class="user__initials">JD</span>
+              </div>
+              <form class="comments__form form">
+                <textarea
+                  name="text"
+                  class="form__textarea"
+                  placeholder="Join the discussion"
+                ></textarea>
+              </form>
+            </div>
+
+            <div class="comments__share share">
+              <span class="share__text">Connected with</span>
+              <div class="share__links">
+                <a href="#" class="share__link link">
+                  <i class="share__icon fab fa-twitter"></i>
+                </a>
+                <a href="#" class="share__link link">
+                  <i class="share__icon fab fa-facebook-f"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /.comments-wrapper -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.comments -->
     </main>
     <!-- /.main -->
 
