Fix: links in phpmailer-message.html

--- a/phpmailer-message.html
+++ b/phpmailer-message.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Redirect to the main page -->
-    <meta http-equiv="refresh" content="10; url = index.html" />
+    <meta
+      http-equiv="refresh"
+      content="10; url = https://andrey-ustinov.ru/minimo/"
+    />
 
     <title>Minimo | Subscribing</title>
 
@@ -29,7 +32,11 @@
     <header class="header">
       <div class="container">
         <div class="header-wrapper">
-          <a href="#" class="logo header__logo link">Minimø</a>
+          <a
+            href="https://andrey-ustinov.ru/minimo/"
+            class="logo header__logo link"
+            >Minimø</a
+          >
 
           <nav class="nav header__nav">
             <ul class="nav__list">
@@ -37,7 +44,11 @@
                 <a href="#" class="nav__link link">Lifestyle</a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link link">Photodiary</a>
+                <a
+                  href="https://andrey-ustinov.ru/minimo/photodiary/"
+                  class="nav__link link"
+                  >Photodiary</a
+                >
               </li>
               <li class="nav__item">
                 <a href="#" class="nav__link link">Music</a>
@@ -60,8 +71,12 @@
           <p class="message__text">
             Thank you for subscribing! You are being redirected to the main page
             in 10 seconds, please click
-            <a href="index.html" class="message__link link">here</a> if your
-            browser does not redirect you.
+            <a
+              href="https://andrey-ustinov.ru/minimo/"
+              class="message__link link"
+              >here</a
+            >
+            if your browser does not redirect you.
           </p>
         </div>
         <!-- /.message-wrapper -->
